--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,10 +1,10 @@
 <resources>
     <string name="app_name">Playlist maker</string>
-    <string name="search" translatable="false">Поиск</string>
-    <string name="media" translatable="false">Медиатека</string>
-    <string name="settings" translatable="false">Настройки</string>
-    <string name="dark_theme" translatable="false">Темная тема</string>
-    <string name="share_app" translatable="false">Поделиться приложением</string>
-    <string name="text_support" translatable="false">Написать в поддержку</string>
-    <string name="user_agreement" translatable="false">Пользовательское соглашение</string>
+    <string name="search" translatable="true">Поиск</string>
+    <string name="media" translatable="true">Медиатека</string>
+    <string name="settings" translatable="true">Настройки</string>
+    <string name="dark_theme" translatable="true">Темная тема</string>
+    <string name="share_app" translatable="true">Поделиться приложением</string>
+    <string name="text_support" translatable="true">Написать в поддержку</string>
+    <string name="user_agreement" translatable="true">Пользовательское соглашение</string>
 </resources>
