--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,9 @@
     <string name="share_app" translatable="true">Поделиться приложением</string>
     <string name="text_support" translatable="true">Написать в поддержку</string>
     <string name="user_agreement" translatable="true">Пользовательское соглашение</string>
+    <string name="share_course_text" translatable="false">https://practicum.yandex.ru/android-developer/?from=catalog</string>
+    <string name="support_email" translatable="false">Frad551@yandex.ru</string>
+    <string name="support_theme_text" translatable="true">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
+    <string name="support_text" translatable="true">Спасибо разработчикам и разработчицам за крутое приложение!</string>
+    <string name="user_agreement_url" translatable="false">https://yandex.ru/legal/practicum_offer/ru/</string>
 </resources>
