--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,19 @@
 <resources>
-    <string name="app_name">Playlist Maker</string>
+    <string name="app_name">Playlist maker</string>
+    <string name="search" translatable="true">Поиск</string>
+    <string name="media" translatable="true">Медиатека</string>
+    <string name="settings" translatable="true">Настройки</string>
+    <string name="dark_theme" translatable="true">Темная тема</string>
+    <string name="share_app" translatable="true">Поделиться приложением</string>
+    <string name="text_support" translatable="true">Написать в поддержку</string>
+    <string name="user_agreement" translatable="true">Пользовательское соглашение</string>
+    <string name="share_course_text" translatable="false">https://practicum.yandex.ru/android-developer/?from=catalog</string>
+    <string name="support_email" translatable="false">Frad551@yandex.ru</string>
+    <string name="support_theme_text" translatable="true">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
+    <string name="support_text" translatable="true">Спасибо разработчикам и разработчицам за крутое приложение!</string>
+    <string name="user_agreement_url" translatable="false">https://yandex.ru/legal/practicum_offer/ru/</string>
+    <string name="placeholder_without_results" translatable="true">Ничего не нашлось</string>
+    <string name="placeholder_server_error_title">Проблемы со связью</string>
+    <string name="placeholder_server_error_loading">Загрузка не удалась. Проверьте подключение к интернету</string>
+    <string name="refresh">Обновить</string>
 </resources>
