Sprint №12 Реализация свитчера темы, списка истории треков.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,4 +16,6 @@
     <string name="placeholder_server_error_title">Проблемы со связью</string>
     <string name="placeholder_server_error_loading">Загрузка не удалась. Проверьте подключение к интернету</string>
     <string name="refresh">Обновить</string>
+    <string name="search_history_text">Вы искали</string>
+    <string name="clear_search_history">Очистить историю</string>
 </resources>
