--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,9 +13,14 @@
     <string name="support_text" translatable="true">Спасибо разработчикам и разработчицам за крутое приложение!</string>
     <string name="user_agreement_url" translatable="false">https://yandex.ru/legal/practicum_offer/ru/</string>
     <string name="placeholder_without_results" translatable="true">Ничего не нашлось</string>
-    <string name="placeholder_server_error_title">Проблемы со связью</string>
-    <string name="placeholder_server_error_loading">Загрузка не удалась. Проверьте подключение к интернету</string>
-    <string name="refresh">Обновить</string>
-    <string name="search_history_text">Вы искали</string>
-    <string name="clear_search_history">Очистить историю</string>
+    <string name="placeholder_server_error_title" translatable="true">Проблемы со связью</string>
+    <string name="placeholder_server_error_loading" translatable="true">Загрузка не удалась. Проверьте подключение к интернету</string>
+    <string name="refresh" translatable="true">Обновить</string>
+    <string name="search_history_text" translatable="true">Вы искали</string>
+    <string name="clear_search_history" translatable="true">Очистить историю</string>
+    <string name="length" translatable="true">Длительность</string>
+    <string name="album" translatable="true">Альбом</string>
+    <string name="year" translatable="true">Год</string>
+    <string name="genre" translatable="true">Жанр</string>
+    <string name="region" translatable="true">Страна</string>
 </resources>
