--- a/ui/src/main/res/values/strings.xml
+++ b/ui/src/main/res/values/strings.xml
@@ -19,4 +19,9 @@
     <string name="genre" translatable="true">Жанр</string>
     <string name="region" translatable="true">Страна</string>
     <string name="null_track_duration">00:00</string>
+    <string name="empty_media" translatable="true">Ваша медиатека пуста</string>
+    <string name="empty_playlist" translatable="true">Вы не создали \nни одного плейлиста</string>
+    <string name="new_playlist" translatable="true">Новый плейлист</string>
+    <string name="playlists" translatable="true">Плейлисты</string>
+    <string name="favorite_tracks" translatable="true">Избранные треки</string>
 </resources>
